--- a/style.css
+++ b/style.css
@@ -2115,7 +2115,7 @@ button:hover {
         background-size: cover;
         opacity: 0;
         visibility: hidden;
-        transition: opacity 0.4s visibility 0.4s;
+        transition: all 0.4s ease;
     }
 
     .header__menu.open {
@@ -2163,8 +2163,8 @@ button:hover {
     }
 
     .our-resources {
-        padding-top: 80px;
-        padding-bottom: 74px;
+        padding-top: 88px;
+        padding-bottom: 71px;
     }
 
     .info {
@@ -2191,6 +2191,7 @@ button:hover {
         left: -20px;
         font-weight: 700;
         letter-spacing: 0.5px;
+        padding: 5px 0
     }
 
     .tickers__first .tickers__content p {
@@ -2198,7 +2199,8 @@ button:hover {
     }
 
     .tickers__second {
-        margin-top: 7px;
+        margin-top: 5px;
+        padding: 0;
     }
 
     .our-team {
@@ -2371,7 +2373,7 @@ button:hover {
         display: block;
         width: 100%;
         height: 384px;
-        margin-bottom: 59px;
+        margin-bottom: 69px;
     }
 
     .about-us__img img {
@@ -2695,7 +2697,7 @@ button:hover {
 
     .game {
         top: -41px;
-        padding-top: 155px;
+        padding-top: 153px;
     }
 
     .game__info {
@@ -2782,7 +2784,7 @@ button:hover {
 
     .virtual__img {
         width: 594px;
-        bottom: -216px;
+        bottom: -265px;
         left: -260px;
     }
 
@@ -2796,7 +2798,7 @@ button:hover {
         background-repeat: repeat-x;
         padding: 0 33px;
         padding-top: 42px;
-        margin-top: 70px;
+        margin-top: 120px;
     }
 
     .virtual__title {
@@ -2812,15 +2814,19 @@ button:hover {
         top: 50px;
     }
 
-    .faq {
-        padding-top: 78px;
+    .our-team {
+        padding-bottom: 13px;
     }
 
-    .fqa__wrapper {
+    .faq {
+        padding-top: 85px;
+    }
+
+    .faq__border {
         clip-path: polygon(10% 0, 80% 0%, 100% 0, 100% 100%, 80% 100%, 20% 100%, 0 100%, 0 3%);
     }
 
-    .faq__container {
+    .faq__content {
         clip-path: polygon(10% 0, 80% 0%, 100% 0, 100% 100%, 80% 100%, 20% 100%, 0 100%, 0 3%);
     }
 
@@ -2930,7 +2936,7 @@ button:hover {
     }
 
     .social {
-        padding-top: 55px;
+        padding-top: 60px;
     }
 
     .social__title {
